syntax = "proto3";

package auth;

option go_package = "./proto;proto";

// Sign Up
message SignUpRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message SignUpResponse {
    bool status = 1;
    string token = 2;
}

// Sign In
message SignInRequest {
    string username = 1;
    string Password = 2;
}

message SignInResponse {
    bool status = 1;
    string token = 2;
}

service AuthService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc SignIn(SignInRequest) returns (SignInResponse);
}